FIX: navbar 100% height on tablets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,7 @@ textarea::placeholder {
     nav {
         display: block;
         opacity: 1;
+        height: 100%;
     }
 
     /* Gallery Section */
